--- a/biometric/layouts/nav.html
+++ b/biometric/layouts/nav.html
@@ -1,12 +1,29 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scanner</title>
+    <!-- Style -->
+    <link rel="stylesheet" href="{% static 'css/nav.css' %}">
+    <!-- Js -->
+    <script src="{% static 'js/nav.js' %}"></script>
+    <title>Scanner Biometric</title>
 </head>
 <body>
 
+
+    <nav>
+        <ul>
+            <li><a href="/register">Registrar</a></li>
+            <li><a href="/list">Listado</a></li>
+        </ul>
+    </nav>
+
+
+    <!-- view Content -->
+    {% block content %}
+    {% endblock %}
     
 </body>
 </html>
