--- a/biometric/templates/layouts/nav.html
+++ b/biometric/templates/layouts/nav.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style -->
     <link rel="stylesheet" href="{% static 'css/nav.css' %}">
+    <link rel="stylesheet" href="{% static 'css/form.css' %}">
     <!-- Js -->
     <script src="{% static 'js/nav.js' %}"></script>
     <title>Scanner Biometric</title>
