--- a/biometric/static/css/form.css
+++ b/biometric/static/css/form.css
@@ -34,6 +34,22 @@ input:focus {
     border-color: #4caf50;
 }
 
+.cam {
+    background-color: rgb(230, 133, 7);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+
+.cam:hover {
+    background-color: #a09a45;
+}
+
 button {
     background-color: #4caf50;
     color: #fff;
@@ -45,6 +61,10 @@ button {
     box-sizing: border-box;
 }
 
+
 button:hover {
     background-color: #45a049;
 }
+
+
+
