--- a/biometric/templates/layouts/nav.html
+++ b/biometric/templates/layouts/nav.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/form.css' %}">
     <!-- Js -->
     <script src="{% static 'js/nav.js' %}"></script>
+    <script src="{% static 'js/cam.js' %}"></script>
     <title>Scanner Biometric</title>
 </head>
 <body>
