--- a/biometric/templates/register.html
+++ b/biometric/templates/register.html
@@ -26,10 +26,16 @@
           <div class="form-group">
               <input type="number" name="identificate" placeholder="Cedula">
           </div>
-
+          <!-- 
           <div class="form-group">
               <input type="file" name="facial">
+          </div> -->
+
+          <div class="form-group">
+            <input type="file" name="facial" id="id_facial" style="display: none;">
+            <button type="button" class="cam" id="open-camera-btn">Abrir Cámara</button>
           </div>
+        
 
           <!-- Button -->
           <div class="form-group">
@@ -39,5 +45,6 @@
 
     </form>
   </div>
+
 
 {% endblock %}
